@@ -12,14 +12,13 @@
 #
 specification {
 	name 		"wti"
-	type 		"TCP"
+	type 		"telnet"
 	offstring 	"OFF"
 	onstring  	"ON"
 	plugcount 	8
 	timeout 	30  # "/boot *" command takes about 20 sec
 	script login {
 		expect "\n"
-		send "\IAC\DO\TELOPT_ECHO\IAC\DO\TELOPT_SGA\IAC\DONT\TELOPT_TTYPE"
 		expect "word: "
 		send "wti\r\n"
 		expect "NPS> "
