@@ -84,8 +84,6 @@ static List line_ptrs;
         strncpy(yylval, string_buf, len);
         yylval[len] = '\0';
         return TOK_STRING_VAL; 
-/* Below are a bazillion codes you may encounter and want to handle. */
-/* Includeing a bunch of the telnet protocol and its options.        */
 }
     "\\a"                         *string_buf_ptr++ = '\a';
     "\\b"                         *string_buf_ptr++ = '\b';
@@ -96,66 +94,6 @@ static List line_ptrs;
     "\\t"                         *string_buf_ptr++ = '\t';
     "\\v"                         *string_buf_ptr++ = '\v';
     "\n"                          yyerror();
-    "\\xEOF"                      *string_buf_ptr++ = 236;
-    "\\SUSP"                      *string_buf_ptr++ = 237;
-    "\\ABORT"                     *string_buf_ptr++ = 238;
-    "\\EOR"                       *string_buf_ptr++ = 239;
-    "\\SE"                        *string_buf_ptr++ = 240;
-    "\\NOP"                       *string_buf_ptr++ = 241;
-    "\\DM"                        *string_buf_ptr++ = 242;
-    "\\BRK"                       *string_buf_ptr++ = 243;
-    "\\IP"                        *string_buf_ptr++ = 244;
-    "\\AO"                        *string_buf_ptr++ = 245;
-    "\\AYT"                       *string_buf_ptr++ = 246;
-    "\\EC"                        *string_buf_ptr++ = 247;
-    "\\EL"                        *string_buf_ptr++ = 248;
-    "\\GA"                        *string_buf_ptr++ = 249;
-    "\\SB"                        *string_buf_ptr++ = 250;
-    "\\WILL"                      *string_buf_ptr++ = 251;
-    "\\WONT"                      *string_buf_ptr++ = 252;
-    "\\DO"                        *string_buf_ptr++ = 253;
-    "\\DONT"                      *string_buf_ptr++ = 254;
-    "\\IAC"                       *string_buf_ptr++ = 255;
-    "\\TELOPT_BINARY"             *string_buf_ptr++ =   0;
-    "\\TELOPT_ECHO"               *string_buf_ptr++ =   1;
-    "\\TELOPT_RCP"                *string_buf_ptr++ =   2;
-    "\\TELOPT_SGA"                *string_buf_ptr++ =   3;
-    "\\TELOPT_NAMS"               *string_buf_ptr++ =   4;
-    "\\TELOPT_STATUS"             *string_buf_ptr++ =   5;
-    "\\TELOPT_TM"                 *string_buf_ptr++ =   6;
-    "\\TELOPT_RCTE"               *string_buf_ptr++ =   7;
-    "\\TELOPT_NAOL"               *string_buf_ptr++ =   8;
-    "\\TELOPT_NAOP"               *string_buf_ptr++ =   9;
-    "\\TELOPT_NAOCRD"             *string_buf_ptr++ =  10;
-    "\\TELOPT_NAOHTS"             *string_buf_ptr++ =  11;
-    "\\TELOPT_NAOHTD"             *string_buf_ptr++ =  12;
-    "\\TELOPT_NAOFFD"             *string_buf_ptr++ =  13;
-    "\\TELOPT_NAOVTS"             *string_buf_ptr++ =  14;
-    "\\TELOPT_NAOVTD"             *string_buf_ptr++ =  15;
-    "\\TELOPT_NAOLFD"             *string_buf_ptr++ =  16;
-    "\\TELOPT_XASCII"             *string_buf_ptr++ =  17;
-    "\\TELOPT_LOGOUT"             *string_buf_ptr++ =  18;
-    "\\TELOPT_BM"                 *string_buf_ptr++ =  19;
-    "\\TELOPT_DET"                *string_buf_ptr++ =  20;
-    "\\TELOPT_SUPDUP"             *string_buf_ptr++ =  21;
-    "\\TELOPT_SUPDUPOUTPUT"       *string_buf_ptr++ =  22;
-    "\\TELOPT_SNDLOC"             *string_buf_ptr++ =  23;
-    "\\TELOPT_TTYPE"              *string_buf_ptr++ =  24;
-    "\\TELOPT_EOR"                *string_buf_ptr++ =  25;
-    "\\TELOPT_TUID"               *string_buf_ptr++ =  26;
-    "\\TELOPT_OUTMRK"             *string_buf_ptr++ =  27;
-    "\\TELOPT_TTYLOC"             *string_buf_ptr++ =  28;
-    "\\TELOPT_3270REGIME"         *string_buf_ptr++ =  29;
-    "\\TELOPT_X3PAD"              *string_buf_ptr++ =  30;
-    "\\TELOPT_NAWS"               *string_buf_ptr++ =  31;
-    "\\TELOPT_TSPEED"             *string_buf_ptr++ =  32;
-    "\\TELOPT_LFLOW"              *string_buf_ptr++ =  33;
-    "\\TELOPT_LINEMODE"           *string_buf_ptr++ =  34;
-    "\\TELOPT_XDISPLOC"           *string_buf_ptr++ =  35;
-    "\\TELOPT_OLD_ENVIRON"        *string_buf_ptr++ =  36;
-    "\\TELOPT_AUTHENTICATION"     *string_buf_ptr++ =  37;
-    "\\TELOPT_ENCRYPT"            *string_buf_ptr++ =  38;
-    "\\TELOPT_NEW_ENVIRON"        *string_buf_ptr++ =  39;
     \\[0-9][0-9][0-9]             *string_buf_ptr++ =  strtol(&yytext[1], NULL, 8);
     \\(.|\n)                      *string_buf_ptr++ = yytext[1];
     [^\\\n\"]+               {
